--- a/DesarrolloWebCliente/T1_R4/T1_R4_ej8.html
+++ b/DesarrolloWebCliente/T1_R4/T1_R4_ej8.html
@@ -4,13 +4,11 @@
     <meta charset="UTF-8">
     <meta name="author" content="Alejandro Polo Barranco">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Menu Ejercicios</title>
+    <!-- añadimos el documento js externo-->
+    <script src="relacion1-4.js"></script>
+    <title>Ejercicio1</title>
 </head>
 <body>
-    <ul>
-        <li><a href="PracticasT1/index.html">Practicas Tema 1</a></li>
 
-
-    </ul>
 </body>
 </html>
