--- a/DesarrolloWebCliente/Tema1/index.html
+++ b/DesarrolloWebCliente/Tema1/index.html
@@ -8,8 +8,10 @@
 </head>
 <body>
     <ul>
-        <li><a href="DesarrolloWebCliente">Desarrollo Web en Entorno Cliento</a></li>
-
+        <li><a href="T1_R1/index.html">Relación 1</a></li>
+        <li><a href="T1_R2/index.html">Relación 2</a></li>
+        <li><a href="T1_R3/index.html">Relación 3</a></li>
+        <li><a href="T1_R4/index.html">Relación 4</a></li>
 
     </ul>
 </body>
