--- a/DesarrolloWebCliente/index.html
+++ b/DesarrolloWebCliente/index.html
@@ -8,11 +8,7 @@
 </head>
 <body>
     <ul>
-        <li><a href="T1_R1/index.html">Relación 1</a></li>
-        <li><a href="T1_R2/index.html">Relación 2</a></li>
-        <li><a href="T1_R3/index.html">Relación 3</a></li>
-        <li><a href="T1_R4/index.html">Relación 4</a></li>
-
+        <li><a href="Tema1/index.html">Tema 1</a></li>
     </ul>
 </body>
 </html>
