--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <ul>
-        <li><a href="DesarrolloWebCliente">Desarrollo Web en Entorno Cliento</a></li>
+        <li><a href="DesarrolloWebCliente">Desarrollo Web en Entorno Cliente</a></li>
 
 
     </ul>
