--- a/DesarrolloWebCliente/Tema1/T1_R4/T1_R4_ej1.html
+++ b/DesarrolloWebCliente/Tema1/T1_R4/T1_R4_ej1.html
@@ -10,19 +10,8 @@
 </head>
 <body>
     <script>
-        /* defino una variable para usarla en un bucle y un array 
-           para guardar todos los números dados por el usuario
-        */
-        let num;
-        let arraynums = [];
-        // con un bucle me aseguro de estar pidiendo números hasta que el usuario quiera
-        while(num!== "x"){
-            numdeargumentos=parseInt(prompt("Introduce números (introduce x para terminar de pedir:)"))
-            // añado los numeros introducidos por el usuario
-            arraynums.push(parseInt(num));
-        }
-        let resultado = sum(numdeargumentos);
-        alert("La suma de todos estos números da "+ resultado);
+        let resultadofinal = sum(15,14,53,54);
+        alert("La suma de todos estos números da "+ resultadofinal);
 
     </script>
 </body>
