--- a/DesarrolloWebCliente/Tema1/T1_R4/T1_R4_ej2.html
+++ b/DesarrolloWebCliente/Tema1/T1_R4/T1_R4_ej2.html
@@ -6,9 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- añadimos el documento js externo-->
     <script src="relacion1-4.js"></script>
-    <title>Ejercicio1</title>
+    <title>Ejercicio2</title>
 </head>
 <body>
-
+    <script>
+        let resultadofinal = addOnlyNums(3, 'hola', 6, 10);
+        alert("La suma de solo los números es: " + resultadofinal);
+    </script>
 </body>
 </html>
