--- a/DesarrolloWebCliente/Tema1/T1_R4/T1_R4_ej3.html
+++ b/DesarrolloWebCliente/Tema1/T1_R4/T1_R4_ej3.html
@@ -1,14 +1,22 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <meta name="author" content="Alejandro Polo Barranco">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- añadimos el documento js externo-->
     <script src="relacion1-4.js"></script>
-    <title>Ejercicio1</title>
+    <title>Ejercicio3</title>
 </head>
-<body>
 
+<body>
+    <script>
+        let cantidad1 = countTheArgs('prueba', 'prueba', 'prueba');
+        let cantidad2 = countTheArgs('prueba', 'prueba', 'prueba', 'prueba');
+        alert("Cantidad de argumentos en la primera llamada: " + cantidad1);
+        alert("Cantidad de argumentos en la segunda llamada: " + cantidad2);
+    </script>
 </body>
+
 </html>
