--- a/DesarrolloWebCliente/Tema1/T1_R4/T1_R4_ej4.html
+++ b/DesarrolloWebCliente/Tema1/T1_R4/T1_R4_ej4.html
@@ -6,9 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- añadimos el documento js externo-->
     <script src="relacion1-4.js"></script>
-    <title>Ejercicio1</title>
+    <title>Ejercicio4</title>
 </head>
 <body>
-
+    <script>
+        let resultadofinal = combineTwoArrays([10, 22], [13, 24,23]);
+        alert("Array combinado: " + resultadofinal);
+    </script>
 </body>
 </html>
