--- a/DesarrolloWebCliente/Tema1/T1_R4/T1_R4_ej5.html
+++ b/DesarrolloWebCliente/Tema1/T1_R4/T1_R4_ej5.html
@@ -6,9 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- añadimos el documento js externo-->
     <script src="relacion1-4.js"></script>
-    <title>Ejercicio1</title>
+    <title>Ejercicio5</title>
 </head>
 <body>
-
+    <script>
+        let resultado1 = sumEveryOther(15, 8, 7, 9, 5);
+        let resultado2 = sumEveryOther(12, 20, 21);
+        alert("Suma de cada otro argumento (ejemplo 1): " + resultado1);
+        alert("Suma de cada otro argumento (ejemplo 2): " + resultado2);
+    </script>
 </body>
 </html>
