--- a/DesarrolloWebCliente/Tema1/T1_R4/T1_R4_ej6.html
+++ b/DesarrolloWebCliente/Tema1/T1_R4/T1_R4_ej6.html
@@ -6,9 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- añadimos el documento js externo-->
     <script src="relacion1-4.js"></script>
-    <title>Ejercicio1</title>
+    <title>Ejercicio6</title>
 </head>
 <body>
-
+    <script>
+        let resultado1 = divisible(6);
+        let resultado2 = divisible(20);
+        alert("¿Es 6 divisible por 3?: " + resultado1);
+        alert("¿Es 20 divisible por 3?: " + resultado2);
+    </script>
 </body>
 </html>
