--- a/DesarrolloWebCliente/Tema1/T1_R4/T1_R4_ej8.html
+++ b/DesarrolloWebCliente/Tema1/T1_R4/T1_R4_ej8.html
@@ -6,9 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- añadimos el documento js externo-->
     <script src="relacion1-4.js"></script>
-    <title>Ejercicio1</title>
+    <title>Ejercicio8</title>
 </head>
 <body>
-
+    <script>
+        let resultado1 = rango(6, 0, 20);
+        let resultado2 = rango(30, 10, 25);
+        alert("¿Está 6 entre 0 y 20?: " + resultado1);
+        alert("¿Está 10 entre 30 y 25?: " + resultado2);
+    </script>
 </body>
 </html>
