--- a/DesarrolloWebCliente/Tema1/T1_R1/index.html
+++ b/DesarrolloWebCliente/Tema1/T1_R1/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="author" content="Alejandro Polo Barranco">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>R1</title>
 </head>
 <body>
     <ul>
