--- a/DesarrolloWebCliente/Tema1/T1_R4/T1_R4_ej11.html
+++ b/DesarrolloWebCliente/Tema1/T1_R4/T1_R4_ej11.html
@@ -6,14 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- añadimos el documento js externo-->
     <script src="relacion1-4.js"></script>
-    <title>Ejercicio7</title>
+    <title>Ejercicio11</title>
 </head>
 <body>
     <script>
-        let resultado1 = divisibleEntre(16, 2);
-        let resultado2 = divisibleEntre(20, 7);
-        alert("¿Es 10 divisible entre 2?: " + resultado1);
-        alert("¿Es 10 divisible entre 3?: " + resultado2);
+        let resultadofinal = imc(80, 1.80);
+        alert("El índice de masa corporal es: " + resultadofinal);
     </script>
 </body>
 </html>
