--- a/DesarrolloWebCliente/Tema1/T1_R4/T1_R4_ej14.html
+++ b/DesarrolloWebCliente/Tema1/T1_R4/T1_R4_ej14.html
@@ -6,14 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- añadimos el documento js externo-->
     <script src="relacion1-4.js"></script>
-    <title>Ejercicio7</title>
+    <title>Ejercicio14</title>
 </head>
 <body>
     <script>
-        let resultado1 = divisibleEntre(16, 2);
-        let resultado2 = divisibleEntre(20, 7);
-        alert("¿Es 10 divisible entre 2?: " + resultado1);
-        alert("¿Es 10 divisible entre 3?: " + resultado2);
+        let resultadofinal = divisibleEntre(30, 7);
+        alert("¿Es 30 divisible entre 7?: " + resultadofinal);
     </script>
 </body>
 </html>
