--- a/DesarrolloWebCliente/Tema2/T2_R1/T2_R1_ej7.html
+++ b/DesarrolloWebCliente/Tema2/T2_R1/T2_R1_ej7.html
@@ -1,15 +1,16 @@
-<!DOCTYPE html>
+T<!DOCTYPE html>
 <html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <meta name="author" content="Alejandro Polo Barranco">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Menu Ejercicios</title>
+    <!-- añadimos el documento js externo-->
+    <script src="relacion1_T2.js"></script>
+    <title>Ejercicio1</title>
 </head>
+
 <body>
-    <ul>
-        <li><a href="Tema1/index.html">Tema 1</a></li>
-        <li><a href="Tema2/index.html">Tema 2</a></li>
-    </ul>
 </body>
+
 </html>
