--- a/DesarrolloWebCliente/Tema2/index.html
+++ b/DesarrolloWebCliente/Tema2/index.html
@@ -8,8 +8,9 @@
 </head>
 <body>
     <ul>
-        <li><a href="Tema1/index.html">Tema 1</a></li>
-        <li><a href="Tema2/index.html">Tema 2</a></li>
+        <li><a href="T2_R1/index.html">Relación 1</a></li>
+        <li><a href="T2_R2/index.html">Relación 2</a></li>
+
     </ul>
 </body>
 </html>
