--- a/DesarrolloWebCliente/Tema1/T1_R5/index.html
+++ b/DesarrolloWebCliente/Tema1/T1_R5/index.html
@@ -8,9 +8,8 @@
 </head>
 <body>
     <ul>
-        <li><a href="DesarrolloWebCliente/index.html">Desarrollo Web en Entorno Cliente</a></li>
-
-
+        <li><a href="T1_R5_ej6.html">Ejercicio 6</a></li>
+        <li><a href="T1_R5_ej7.html">Ejercicio 7</a></li>
     </ul>
 </body>
 </html>
