--- a/DesarrolloWebCliente/Tema2/T2_R1/T2_R1_ej1.html
+++ b/DesarrolloWebCliente/Tema2/T2_R1/T2_R1_ej1.html
@@ -19,7 +19,7 @@
         // se puede pasar de milisegundos a horas dividiendo entre 3600000
         let horas= diferencia/3600000;
         // se pasan las horas a dias
-        let dias=horas/24;
+        let dias=Math.round(horas/24);
         alert("Quedan "+dias+" hasta navidad")
 
     </script>
