--- a/DesarrolloWebCliente/Tema2/T2_R1/T2_R1_ej7.html
+++ b/DesarrolloWebCliente/Tema2/T2_R1/T2_R1_ej7.html
@@ -1,4 +1,4 @@
-T<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="es">
 
 <head>
@@ -7,10 +7,16 @@ T<!DOCTYPE html>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- añadimos el documento js externo-->
     <script src="relacion1_T2.js"></script>
-    <title>Ejercicio1</title>
+    <title>Ejercicio7</title>
 </head>
 
 <body>
+    <script>
+        let num1=prompt("Introduce el numero 1 ");
+        let num2=prompt("Introduce el numero 2 ");
+        let num3=prompt("Introduce el numero 3 ");
+        alert("El numero mas alto de los introducidos es "+ Math.max(num1,num2,num3));
+    </script>
 </body>
 
 </html>
