Despliege compartido correccion

--- a/DespliegeDeAplicacionesWeb/index.html
+++ b/DespliegeDeAplicacionesWeb/index.html
@@ -4,14 +4,11 @@
     <meta charset="UTF-8">
     <meta name="author" content="Alejandro Polo Barranco">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Menu Ejercicios</title>
+    <title>Despliege</title>
 </head>
 <body>
     <ul>
-        <li><a href="DesarrolloWebCliente/index.html">Desarrollo Web en Entorno Cliente</a></li>
-        <li><a href="DespliegeDeAplicacionesWeb/">Despliege De Aplicaciones Web</a></li>
-
-
+        <li><a href="despliegecompartido/index.html">Pagina Individual</a></li>
     </ul>
 </body>
 </html>
