--- a/DesarrolloWebCliente/Tema2/T2_R1/T2_R1_ej11.html
+++ b/DesarrolloWebCliente/Tema2/T2_R1/T2_R1_ej11.html
@@ -11,6 +11,17 @@
 </head>
 
 <body>
+    <script>
+        // teniendo un array y una variable donde introducirla al reves
+        const frase = prompt("Introduce una frase para invertirla");
+        let fraseInvertida = "";
+        // usamos un bucle para introducir al reves la frase que de el usuario
+        for (let i = frase.length - 1; i >= 0; i--) {
+            fraseInvertida += frase[i];
+        }
+
+        alert("La frase invertida es: " + fraseInvertida);
+    </script>
 </body>
 
 </html>
