--- a/DesarrolloWebCliente/Tema2/index.html
+++ b/DesarrolloWebCliente/Tema2/index.html
@@ -10,6 +10,9 @@
     <ul>
         <li><a href="T2_R1/index.html">Relación 1</a></li>
         <li><a href="T2_R2/index.html">Relación 2</a></li>
+        <li><a href="T2_R3/index.html">Relación 3</a></li>
+        <li><a href="T2_R4/index.html">Relación 4</a></li>
+        <li><a href="T2_R5/index.html">Relación 5</a></li>
 
     </ul>
 </body>
