Tema 2 Relacion 5 y geolocalizacion correccion de index

--- a/DesarrolloWebCliente/Tema2/index.html
+++ b/DesarrolloWebCliente/Tema2/index.html
@@ -13,6 +13,8 @@
         <li><a href="T2_R3/index.html">Relación 3</a></li>
         <li><a href="T2_R4/index.html">Relación 4</a></li>
         <li><a href="T2_R5/index.html">Relación 5</a></li>
+        <li><a href="T2_R6/">Relación 6</a></li>
+        <li><a href="T2_R7/index.html">Relación 7</a></li>
 
     </ul>
 </body>
