--- a/DesarrolloWebCliente/Tema3/index.html
+++ b/DesarrolloWebCliente/Tema3/index.html
@@ -8,9 +8,9 @@
 </head>
 <body>
     <ul>
-        <li><a href="Tema1/index.html">Tema 1</a></li>
-        <li><a href="Tema2/index.html">Tema 2</a></li>
-        <li><a href="Tema3/index.html">Tema 3</a></li>
+        <li><a href="T3_R1/">Relación 1</a></li>
+        <li><a href="T3_R2/index.html">Relación 2</a></li>
+
     </ul>
 </body>
 </html>
