--- a/DesarrolloWebCliente/Tema3/T3_R1/Ejercicio7.html
+++ b/DesarrolloWebCliente/Tema3/T3_R1/Ejercicio7.html
@@ -1,16 +1,19 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <meta name="author" content="Alejandro Polo Barranco">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Menu Ejercicios</title>
+    <title>Ejercicio1</title>
+    <script src="tema3relacion1.js"></script>
 </head>
-<body>
-    <ul>
-        <li><a href="T3_R1/index.html">Relación 1</a></li>
-        <li><a href="T3_R2/index.html">Relación 2</a></li>
 
-    </ul>
+<body>
+    <div id="tablafactorial"></div>
+    <script>
+        generarTablaFactoriales();
+    </script>
 </body>
+
 </html>
