Diseño de interfaces CSS

--- a/DisInterfacesWeb/CSS/Ejercicios/index.html
+++ b/DisInterfacesWeb/CSS/Ejercicios/index.html
@@ -8,9 +8,7 @@
 </head>
 <body>
     <ul>
-        <li><a href="DesarrolloWebCliente/index.html">Desarrollo Web en Entorno Cliente</a></li>
-        <li><a href="DespliegeDeAplicacionesWeb/">Despliege De Aplicaciones Web</a></li>
-        <li><a href="DisInterfacesWeb/index.html">Diseño de Interfaces Web</a></li>
+        <li><a href="Ejercicio7-ColoryBackground/Ejercicio7.html">Ejercicio7-Color&Background</a></li>
     </ul>
 </body>
 </html>
