--- a/DisInterfacesWeb/index.html
+++ b/DisInterfacesWeb/index.html
@@ -8,9 +8,7 @@
 </head>
 <body>
     <ul>
-        <li><a href="DesarrolloWebCliente/index.html">Desarrollo Web en Entorno Cliente</a></li>
-        <li><a href="DespliegeDeAplicacionesWeb/">Despliege De Aplicaciones Web</a></li>
-        <li><a href="DisInterfacesWeb/index.html">Diseño de Interfaces Web</a></li>
+        <li><a href="CSS/Ejercicios/index.html">Ejercicios con CSS</a></li>
     </ul>
 </body>
 </html>
