Diseño de interfaces gradiales y bordes CSS

--- a/DisInterfacesWeb/CSS/Ejercicios/Ejercicio9-Gradientes/Ejercicio9.html
+++ b/DisInterfacesWeb/CSS/Ejercicios/Ejercicio9-Gradientes/Ejercicio9.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="author" content="Alejandro Polo Barranco">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style7.css">
-    <title>Ejercicio7-color-Background</title>
+    <link rel="stylesheet" href="style9.css">
+    <title>Ejercicio9-Gradientes</title>
 </head>
 <body>
     <main>
@@ -45,6 +45,14 @@
                     <br>
                     <div>
                         
+                    </div>
+                    <br>
+                    <div>
+                        
+                    </div>
+                    <br>
+                    <div>
+
                     </div>
                     <br>
                     <div>
