--- a/DisInterfacesWeb/CSS/Ejercicios/index.html
+++ b/DisInterfacesWeb/CSS/Ejercicios/index.html
@@ -9,6 +9,9 @@
 <body>
     <ul>
         <li><a href="Ejercicio7-ColoryBackground/Ejercicio7.html">Ejercicio7-Color&Background</a></li>
+        <li><a href="Ejercicio8-SombrasEnTextos&CajasCSS/Ejercicio8_1.html">Ejercicio8-SombrasEnTextos(1)</a></li>
+        <li><a href="Ejercicio8-SombrasEnTextos&CajasCSS/Ejercicio8_2.html">Ejercicio8-SombrasEnTextos(2)</a></li>
+        <li><a href="Ejercicio9-Gradientes/Ejercicio9.html">Ejercicio9-Gradientes</a></li>
     </ul>
 </body>
 </html>
