Relacion 2II Relacion 3 Relacion 4

--- a/DesarrolloWebCliente/Tema3/index.html
+++ b/DesarrolloWebCliente/Tema3/index.html
@@ -10,6 +10,9 @@
     <ul>
         <li><a href="T3_R1/index.html">Relación 1</a></li>
         <li><a href="T3_R2/index.html">Relación 2</a></li>
+        <li><a href="T3_R2(II)/index.html">Relación 2 Arrays(II)</a></li>
+        <li><a href="T3_R3/index.html">Relación 3</a></li>
+        <li><a href="T3_R4/index.html">Relación 4</a></li>
 
     </ul>
 </body>
